@@ -2,6 +2,10 @@ requires 'perl', '5.10.0';
 requires 'RDF::NS', '20140908';
 
 suggests 'RDF::Trine', '1.010';
+suggests 'Unicode::Normalize';
 
-test_requires 'JSON';
-test_requires 'RDF::Trine';
+on test => sub {
+    requires 'JSON';
+    requires 'RDF::Trine';
+    requires 'Unicode::Normalize';
+};
